myapp/test/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp-dr
  namespace: test3
spec:
  host: myapp
  trafficPolicy:
    tls:
      mode: DISABLE
