myapp/test/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp3.zyuru.com
  namespace: test3
spec:
  hosts:
  - myapp3.zyuru.com
  gateways:
  - test3-gateway
  http:
  - route:
    - destination:
        host: myapp
        port:
          number: 80
